src/main/java/com/example/frota/errors/StatusErrado.java
package com.example.frota.errors;

public class StatusErrado extends RuntimeException{
	public StatusErrado(String mensagem) {
		super(mensagem);
	}
}
